--- a/app/src/main/res/layout/card_movimenti.xml
+++ b/app/src/main/res/layout/card_movimenti.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+
         xmlns:app="http://schemas.android.com/apk/res-auto"
         app:cardUseCompatPadding="true"
         app:cardMaxElevation="1dp"
@@ -17,35 +18,71 @@
         android:id="@+id/cv"
         >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <android.support.constraint.ConstraintLayout
+        <LinearLayout
             android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="16dp">
+            android:padding="5dp">
 
             <TextView
-                android:id="@+id/beneficiario"
-                android:layout_width="112dp"
+                android:id="@+id/scadenza"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toStartOf="@+id/importo"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0"
+
+
+                />
 
             <TextView
                 android:id="@+id/importo"
                 android:layout_width="155dp"
                 android:layout_height="wrap_content"
-                android:textAlignment="viewStart"
-                android:textSize="24sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/beneficiario"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:textSize="35sp"
+                android:textAlignment="center"
 
-        </android.support.constraint.ConstraintLayout>
+
+                />
+
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/hiddenlayout"
+            android:padding="5dp"
+            android:visibility="gone">
+            <TextView
+                style="@style/text_style_conto"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/app_name"/>
+
+            <TextView
+                style="@style/text_style_beneficiario"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/beneficiario"/>
+
+            <TextView
+                style="@style/text_style_tipo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tipo"/>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
 
 
     </android.support.v7.widget.CardView>
