--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,26 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="text_style_importo" parent="@android:style/TextAppearance.Medium">
+    </style>
+
+    <style name="text_style_scadenza" parent="@android:style/TextAppearance.Medium">
+    </style>
+
+    <style name="text_style_conto" parent="@android:style/TextAppearance.Medium">
+    </style>
+
+    <style name="text_style_tipo" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textStyle">italic</item>
+        <item name="android:textColor">#cccdce</item>
+
+    </style>
+
+    <style name="text_style_beneficiario" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textStyle">bold</item>
+
+    </style>
+
+
+
 </resources>
