--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -13,7 +13,7 @@
     <item android:title="Categorie">
         <menu>
             <item
-                android:title="Cucina"
+                android:title="Crea conto"
                 android:id="@+id/action_category_1"/>
             <item
                 android:title="Green"
