--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity"
-    tools:showIn="@layout/navigation_view"
+    tools:showIn="@layout/main_activity_view"
 
 
         android:id="@+id/recyclerview"
