--- a/app/src/main/res/layout/card_dailytransaction.xml
+++ b/app/src/main/res/layout/card_dailytransaction.xml
@@ -27,14 +27,25 @@
                 android:id="@+id/relativeLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="5dp">
+                android:padding="5dp"
+                android:orientation="vertical">
+
 
                 <TextView
-                    android:id="@+id/scadenza"
-                    android:layout_width="50dp"
+                    android:id="@+id/id_account_balance"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_weight="0"/>
+                    android:layout_weight="0"
+                    android:textSize="30sp"/>
+
+                <TextView
+                    android:id="@+id/id_account_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="0"
+                    android:textSize="14sp"/>
 
 
                     />
