--- a/app/src/main/res/layout/fragment_dialog_fragment_importo.xml
+++ b/app/src/main/res/layout/fragment_dialog_fragment_importo.xml
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="56dp"
             android:hint="@string/importo"
+            android:inputType="numberDecimal"
              />
 
 
