--- a/app/src/main/res/layout/navigation_drawer_filter.xml
+++ b/app/src/main/res/layout/navigation_drawer_filter.xml
@@ -1,6 +1,6 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawer_layout"
+    android:id="@+id/drawer_layout_filter"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:fitsSystemWindows="true"
@@ -8,7 +8,7 @@
     android:focusableInTouchMode="true">
 
 
-    <include layout="@layout/main_activity_view"
+    <include layout="@layout/filter_activity_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
