--- a/app/src/main/res/layout/fragment_dialog_fragment_scadenza.xml
+++ b/app/src/main/res/layout/fragment_dialog_fragment_scadenza.xml
@@ -10,7 +10,20 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/selectdate"
+            android:id="@+id/select_date"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="seleziona data" />
+        <Spinner
+            android:id="@+id/spinner_recurrence"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:spinnerMode="dropdown"
+
+            />
+
+        <EditText
+            android:id="@+id/select_end_date"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="seleziona data" />
