--- a/app/src/main/res/layout/card_dailytransaction.xml
+++ b/app/src/main/res/layout/card_dailytransaction.xml
@@ -2,21 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="1dp"
-    >
+    android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
+    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/cv"
         android:layout_width="match_parent"
+
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:cardUseCompatPadding="true"
-        app:cardMaxElevation="1dp"
         app:cardElevation="1dp"
-        android:id="@+id/cv"
-        >
+        app:cardMaxElevation="1dp"
+        app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,8 +26,8 @@
                 android:id="@+id/relativeLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="5dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="5dp">
 
 
                 <TextView
@@ -37,7 +36,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="0"
-                    android:textSize="30sp"/>
+                    android:textSize="30sp" />
 
                 <TextView
                     android:id="@+id/id_account_name"
@@ -45,47 +44,11 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="0"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp" />
 
 
-                    />
+                />
 
-            </LinearLayout>
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/hiddenlayout"
-                android:padding="5dp"
-                android:visibility="gone">
-<!--
-                <TextView
-                    style="@style/text_style_conto"
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/app_name"/>
-
-                <TextView
-                    style="@style/text_style_beneficiario"
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/beneficiario"/>
-
-                <TextView
-                    style="@style/text_style_tipo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/tipo"/>
--->
-                <android.support.v7.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/rv_transaction"
-                    >
-
-                </android.support.v7.widget.RecyclerView>
             </LinearLayout>
 
 
@@ -93,5 +56,44 @@
 
 
     </android.support.v7.widget.CardView>
+
+    <LinearLayout
+
+        android:id="@+id/hiddenlayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:orientation="vertical"
+        android:padding="5dp"
+        android:backgroundTint="@android:color/transparent"
+        android:visibility="visible">
+        <!--
+                        <TextView
+                            style="@style/text_style_conto"
+
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/app_name"/>
+
+                        <TextView
+                            style="@style/text_style_beneficiario"
+
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/beneficiario"/>
+
+                        <TextView
+                            style="@style/text_style_tipo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/tipo"/>
+        -->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_transaction"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.v7.widget.RecyclerView>
+    </LinearLayout>
 
 </LinearLayout>
