--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,9 @@
 <resources>
     <color name="colorPrimary">#adb8f4</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="red">#9ccc65</color>
+    <color name="red">#ff1744</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
+
     <color name="colorAccent">#FF4081</color>
 </resources>
