--- a/app/src/main/res/layout/fragment_dialog_fragment_scadenza.xml
+++ b/app/src/main/res/layout/fragment_dialog_fragment_scadenza.xml
@@ -24,6 +24,7 @@
 
         <EditText
             android:id="@+id/select_end_date"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="seleziona data" />
