--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="red">#ff1744</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
+    <color name="grey">#ececec</color>
 
     <color name="colorAccent">#FF4081</color>
 </resources>
