--- a/app/src/main/res/layout/card_dailytransaction.xml
+++ b/app/src/main/res/layout/card_dailytransaction.xml
@@ -7,7 +7,8 @@
     android:layout_margin="1dp"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.CardView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/cv"
         android:layout_width="match_parent"
 
@@ -25,30 +26,100 @@
             <LinearLayout
                 android:id="@+id/relativeLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="5dp">
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:textAlignment="center">
 
-
-                <TextView
-                    android:id="@+id/id_account_balance"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
                     android:layout_weight="0"
-                    android:textSize="30sp" />
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/id_account_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="0"
+                    <TextView
+                        android:id="@+id/id_account_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginBottom="5dp"
+                        android:layout_weight="1"
+                    android:textAlignment="center"
                     android:textSize="14sp" />
 
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
 
-                />
+                        android:layout_weight="1"
+                        android:background="#1e000000" />
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="bottom"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/id_refresh_current_balance"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:cropToPadding="false"
+                                card_view:srcCompat="@drawable/ic_refresh_current_balance" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:layout_weight="0"
+                                android:text="Saldo previsto"
+                                android:layout_marginTop="5dp"
+                                android:textAlignment="center"
+                                android:textSize="14sp" />
+
+                            <TextView
+                                android:id="@+id/id_account_future_balance"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:layout_weight="0"
+                                android:textAlignment="center"
+                                android:textSize="30sp" />
+
+                            <TextView
+                                android:id="@+id/textView3"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:layout_weight="0"
+
+                                android:text="Saldo corrente"
+                                android:textAlignment="center"
+                                android:textSize="12sp" />
+
+                            <TextView
+                                android:id="@+id/id_account_current_balance"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:layout_weight="0"
+                                android:textAlignment="center"
+                                android:textSize="18sp" />
+
+                        </LinearLayout>
+                    </LinearLayout>
+                </LinearLayout>
             </LinearLayout>
 
 
@@ -66,28 +137,7 @@
         android:orientation="vertical"
         android:padding="5dp"
         android:backgroundTint="@android:color/transparent"
-        android:visibility="visible">
-        <!--
-                        <TextView
-                            style="@style/text_style_conto"
-
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/app_name"/>
-
-                        <TextView
-                            style="@style/text_style_beneficiario"
-
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/beneficiario"/>
-
-                        <TextView
-                            style="@style/text_style_tipo"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/tipo"/>
-        -->
+        android:visibility="gone">
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_transaction"
             android:layout_width="match_parent"
