--- a/app/src/main/res/layout/card_movimenti.xml
+++ b/app/src/main/res/layout/card_movimenti.xml
@@ -3,18 +3,17 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:layout_margin="1dp"
     >
 
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:orientation="vertical"
 
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:cardUseCompatPadding="true"
-        app:cardMaxElevation="1dp"
-        app:cardElevation="1dp"
+        android:layout_margin="0dp"
+        android:padding="0dp"
         android:id="@+id/cv"
         >
 
@@ -86,6 +85,6 @@
     </LinearLayout>
 
 
-    </android.support.v7.widget.CardView>
+    </LinearLayout>
 
 </LinearLayout>
