--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#303f9f</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
-    <color name="pink">#eb1460</color>
+    <color name="pink">#e91e63</color>
     <color name="purple">#9c1ab1</color>
     <color name="deep_purple">#6633b9</color>
     <color name="indigo">#3d4db7</color>
@@ -23,6 +23,17 @@
     <color name="grey">#9d9d9d</color>
     <color name="blue_grey">#5e7C8b</color>
     <color name="red">#fff6402c</color>
+
+    <color name="red_bg_black_text">#e57373</color>
+    <color name="pink_bg_black_text">#f06292</color>
+    <color name="purple_bg_black_text">#ba68c8</color>
+    <color name="blue_bg_black_text">#64b5f6</color>
+    <color name="green_bg_black_text">#81c784</color>
+    <color name="yellow_bg_black_text">#fff176</color>
+    <color name="orange_bg_black_text">#ffb74d</color>
+    <color name="brown_bg_black_text">#a1887f</color>
+    <color name="grey_bg_black_text">#90a4ae</color>
+
 
     <color name="colorAccent">#ff4081</color>
 </resources>
