--- a/app/src/main/res/layout/input_dialog_creaconto.xml
+++ b/app/src/main/res/layout/input_dialog_creaconto.xml
@@ -21,7 +21,7 @@
             android:id="@+id/saldoconto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="numberDecimal"
+            android:inputType="numberSigned"
             android:hint="Saldo..."/>
 
         <Button
