--- a/app/src/main/res/layout/activity_crea_conto.xml
+++ b/app/src/main/res/layout/activity_crea_conto.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.franc.mygest.CreaContoActivity">
+    tools:context="com.example.franc.mygest.AccountsManageActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -12,7 +12,7 @@
         android:theme="@style/AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@id/toolbar_creacontoactivity"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
@@ -22,12 +22,5 @@
 
     <include layout="@layout/creaconto_activity_view" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
-
+    <include layout="@layout/fab_insert_transaction"/>
 </android.support.design.widget.CoordinatorLayout>
