--- a/app/src/main/res/layout/activity_dialog.xml
+++ b/app/src/main/res/layout/activity_dialog.xml
@@ -13,7 +13,7 @@
 
 
         <FrameLayout
-            android:id="@+id/fragmentcontainer"
+            android:id="@id/fragment_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
