--- a/app/src/main/res/layout/card_conti.xml
+++ b/app/src/main/res/layout/card_conti.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent" android:layout_height="wrap_content"
@@ -15,7 +16,7 @@
         app:cardUseCompatPadding="true"
         app:cardMaxElevation="1dp"
         app:cardElevation="1dp"
-        android:id="@+id/cv_account"
+        android:id="@id/cv_account_dashboard"
         >
 
         <LinearLayout
