--- a/app/src/main/res/layout/fab_insert_transaction.xml
+++ b/app/src/main/res/layout/fab_insert_transaction.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab_insert_transaction"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="end|bottom"
