--- a/app/src/main/res/layout/filter_activity_view.xml
+++ b/app/src/main/res/layout/filter_activity_view.xml
@@ -24,7 +24,7 @@
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7" />
             <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
+                android:id="@id/toolbar_creacontoactivity"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
@@ -40,13 +40,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <!--
-                <Spinner
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/id_spinner_todate"/>
-        -->
 
         <android.support.v7.widget.RecyclerView
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -73,7 +66,7 @@
 
     <include
         android:id="@+id/include"
-        layout="@layout/fab_menu"
+        layout="@layout/fab_insert_transaction"
         android:layout_width="match_parent"
 
         android:layout_height="wrap_content"
