bugfix: rimuove correttamente si spera

--- a/app/src/main/res/layout/creaconto_activity_view.xml
+++ b/app/src/main/res/layout/creaconto_activity_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.franc.mygest.AccountsManageActivity"
+    tools:context="com.example.franc.mygest.activities.AccountsManageActivity"
     tools:showIn="@layout/activity_crea_conto">
 
     <android.support.v7.widget.RecyclerView
