--- a/app/src/main/res/layout/filter_activity_view.xml
+++ b/app/src/main/res/layout/filter_activity_view.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    tools:context=".activities.MainActivity">
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
@@ -45,7 +45,7 @@
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
-            tools:context=".AllTransactionActivity"
+            tools:context=".activities.AllTransactionActivity"
 
 
             android:id="@+id/recyclerview"
