--- a/app/src/main/res/layout/fragment_dialog_fragment_importo.xml
+++ b/app/src/main/res/layout/fragment_dialog_fragment_importo.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    tools:context="com.example.franc.mygest.DialogFragmentBeneficiario">
+    tools:context="com.example.franc.mygest.fragments.DialogFragmentBeneficiario">
 
     <LinearLayout
         android:layout_width="match_parent"
