--- a/app/src/main/res/layout/activity_crea_conto.xml
+++ b/app/src/main/res/layout/activity_crea_conto.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.franc.mygest.AccountsManageActivity">
+    tools:context="com.example.franc.mygest.activities.AccountsManageActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
