groupby date seems working

--- a/app/src/main/res/layout/fragment_dialog_fragment_conto.xml
+++ b/app/src/main/res/layout/fragment_dialog_fragment_conto.xml
@@ -15,6 +15,14 @@
             android:spinnerMode="dropdown"
 
             />
+        <Spinner
+            android:id="@+id/spinner_transaction_types"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:spinnerMode="dropdown"
+
+            />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
