--- a/app/src/main/res/layout/card_conti.xml
+++ b/app/src/main/res/layout/card_conti.xml
@@ -52,32 +52,37 @@
                     />
 
             </LinearLayout>
+
             <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:id="@+id/hiddenlayout"
+                android:layout_width="match_parent"
+                android:layout_height="46dp"
+                android:orientation="horizontal"
                 android:padding="5dp"
-                android:visibility="gone">
-                <TextView
-                    style="@style/text_style_conto"
+                android:visibility="visible">
 
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/app_name"/>
 
-                <TextView
-                    style="@style/text_style_beneficiario"
+                <ImageView
+                    android:id="@+id/img_delete_account"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="right"
 
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/beneficiario"/>
+                    android:layout_weight="0.5"
+                    android:adjustViewBounds="true"
+                    android:cropToPadding="false"
+                    card_view:srcCompat="@drawable/ic_delete" />
 
-                <TextView
-                    style="@style/text_style_tipo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/tipo"/>
+                <ImageView
+                    android:id="@+id/img_edit_account"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="right"
+
+                    android:layout_weight="0.5"
+                    android:adjustViewBounds="true"
+                    android:cropToPadding="false"
+                    card_view:srcCompat="@drawable/ic_edit" />
 
             </LinearLayout>
 
