--- a/app/src/main/res/layout/card_movimenti.xml
+++ b/app/src/main/res/layout/card_movimenti.xml
@@ -24,6 +24,25 @@
         >
 
         <LinearLayout
+            android:id="@+id/hiddenlayout_card_movimento_top"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="5dp"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/id_card_tipo"
+                style="@style/text_style_tipo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/tipo"
+                android:textAlignment="center"
+                android:textStyle="italic" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -58,44 +77,66 @@
 
             <TextView
                 android:id="@+id/id_card_importo"
-                android:layout_width="155dp"
-                android:layout_height="wrap_content"
+                android:layout_width="257dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
-                android:textSize="35sp"
                 android:textAlignment="center"
+                android:textSize="35sp"
 
 
                 />
 
+            <ImageView
+                android:id="@+id/ic_recurrence"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="0"
+                android:padding="2dp"
+                android:visibility="invisible"
+                app:srcCompat="@drawable/ic_recurrence" />
+
+            <ImageView
+                android:padding="2dp"
+
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="0"
+                app:srcCompat="@drawable/ic_trans_out" />
+
         </LinearLayout>
+
         <LinearLayout
-            android:orientation="vertical"
+            android:id="@+id/hiddenlayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/hiddenlayout"
+            android:orientation="horizontal"
             android:padding="5dp"
             android:visibility="gone">
-            <TextView
-                style="@style/text_style_conto"
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/id_card_conto"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-            <TextView
-                style="@style/text_style_beneficiario"
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_beneficiario" />
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/id_card_beneficiario"/>
+                <TextView
+                    android:id="@+id/id_card_beneficiario"
 
-            <TextView
-                style="@style/text_style_tipo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/id_card_tipo"
-                android:text="@string/tipo"/>
+                    style="@style/text_style_beneficiario"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
 
         </LinearLayout>
 
