--- a/app/src/main/res/layout/main_activity_view.xml
+++ b/app/src/main/res/layout/main_activity_view.xml
@@ -19,7 +19,10 @@
             android:elevation="4dp"
             android:theme="@style/Base.ThemeOverlay.AppCompat.ActionBar"
             app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light"
-            android:layout_height="56dp">
+            android:layout_height="56dp"
+            android:paddingRight="56dp"
+            >
+
 
             <Button
                 android:id="@+id/selectdate"
@@ -27,7 +30,12 @@
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 android:hint="Seleziona intervallo di tempo"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:layout_marginLeft="?attr/actionBarSize"
+                android:layout_marginRight="?attr/actionBarSize"
+            />
+
+
 
         </android.support.v7.widget.Toolbar>
 
