--- a/app/src/main/res/layout/card_conti.xml
+++ b/app/src/main/res/layout/card_conti.xml
@@ -1,95 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:layout_margin="1dp"
-    >
+    android:id="@+id/cv_account_dashboard"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:elevation="1dp"
+    card_view:cardMaxElevation="1dp"
+    android:layout_margin="1dp">
 
-    <android.support.v7.widget.CardView
+
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_height="wrap_content">
 
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:cardUseCompatPadding="true"
-        app:cardMaxElevation="1dp"
-        app:cardElevation="1dp"
-        android:id="@id/cv_account_dashboard"
-        >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:id="@+id/relativeLayout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="5dp">
-
-                <TextView
-                    android:id="@+id/cardNomeconto"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight=".70"
+        <TextView
+            android:id="@+id/cardNomeconto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
 
-                    />
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="Cassa di Risparmi di Volterra"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:id="@+id/cardSaldoconto"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:textSize="35sp"
-                    android:layout_weight=".30"
-
-
-                    />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/hiddenlayout"
-                android:layout_width="match_parent"
-                android:layout_height="46dp"
-                android:orientation="horizontal"
-                android:padding="5dp"
-                android:visibility="visible">
+        <TextView
+            android:id="@+id/cardSaldoconto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
 
-                <ImageView
-                    android:id="@+id/img_delete_account"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:text="254,24 €"
+            android:textColor="@android:color/white"
+            android:textSize="35sp"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/cardNomeconto" />
 
-                    android:layout_weight="0.5"
-                    android:adjustViewBounds="true"
-                    android:cropToPadding="false"
-                    card_view:srcCompat="@drawable/ic_delete" />
+        <ImageView
+            android:id="@+id/img_edit_account"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-                <ImageView
-                    android:id="@+id/img_edit_account"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:adjustViewBounds="true"
+            android:cropToPadding="false"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintHorizontal_bias="0.5"
+            card_view:layout_constraintStart_toEndOf="@+id/img_delete_account"
+            card_view:layout_constraintTop_toTopOf="@+id/img_delete_account"
+            card_view:srcCompat="@drawable/ic_edit" />
 
-                    android:layout_weight="0.5"
-                    android:adjustViewBounds="true"
-                    android:cropToPadding="false"
-                    card_view:srcCompat="@drawable/ic_edit" />
+        <ImageView
+            android:id="@+id/img_delete_account"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-            </LinearLayout>
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp"
+            android:adjustViewBounds="true"
+            android:cropToPadding="false"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toStartOf="@+id/img_edit_account"
+            card_view:layout_constraintHorizontal_bias="0.5"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/textView2"
+            card_view:srcCompat="@drawable/ic_delete" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:text="Saldo attuale"
+            android:textColor="@android:color/white"
+            android:textSize="12sp"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/cardSaldoconto"
+            card_view:layout_constraintVertical_bias="0.0" />
+
+        <android.support.constraint.Group
+            android:id="@+id/hidden_account_group"
+            android:layout_width="wrap_content"
+
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            card_view:constraint_referenced_ids="img_delete_account, img_edit_account" />
 
 
-        </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 
 
-    </android.support.v7.widget.CardView>
-
-</LinearLayout>
+</android.support.v7.widget.CardView>
