--- a/app/src/main/res/layout/card_dashboard_dates.xml
+++ b/app/src/main/res/layout/card_dashboard_dates.xml
@@ -44,6 +44,20 @@
         app:layout_constraintTop_toBottomOf="@+id/id_card_scadenza_day" />
 
 
+    <TextView
+        android:id="@+id/id_card_scadenza_year"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:padding="0dp"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/id_card_scadenza_day" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_movimenti"
         android:layout_width="0dp"
