--- a/app/src/main/res/layout/fragment_dialog_fragment_scadenza.xml
+++ b/app/src/main/res/layout/fragment_dialog_fragment_scadenza.xml
@@ -28,6 +28,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="seleziona data" />
+        <EditText
+            android:id="@+id/select_saldato"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="saldato fino a" />
 
         <LinearLayout
             android:layout_width="match_parent"
