--- a/app/src/main/res/layout/card_dashboard_accounts.xml
+++ b/app/src/main/res/layout/card_dashboard_accounts.xml
@@ -63,10 +63,25 @@
             android:layout_marginEnd="16dp"
             android:textAlignment="viewEnd"
             android:textColor="@color/white"
-            android:textSize="18sp"
+            android:textSize="30sp"
             card_view:layout_constraintBottom_toBottomOf="@+id/textView3"
             card_view:layout_constraintEnd_toEndOf="parent" />
 
+
+        <TextView
+            android:id="@+id/id_account_total"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:text="TextView"
+            android:textColor="@color/white"
+            android:textSize="10sp"
+            android:textStyle="italic"
+            card_view:layout_constraintBottom_toTopOf="@+id/divider"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent" />
 
         <View
             android:id="@+id/divider"
@@ -110,9 +125,10 @@
             android:layout_marginEnd="16dp"
             android:textAlignment="viewEnd"
             android:textColor="@color/white"
-            android:textSize="18sp"
+            android:textSize="30sp"
             card_view:layout_constraintBottom_toBottomOf="@+id/textView"
-            card_view:layout_constraintEnd_toEndOf="parent" />
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintTop_toTopOf="@+id/textView" />
 
 
     </android.support.constraint.ConstraintLayout>
