--- a/app/src/main/res/layout/filter_menu.xml
+++ b/app/src/main/res/layout/filter_menu.xml
@@ -42,13 +42,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_check">
 
-        <android.support.design.widget.TextInputEditText
+        <AutoCompleteTextView
             android:id="@id/id_edittext_filter_beneficiario"
+            android:hint="beneficiario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-            android:hint="beneficiario"
-            android:textAlignment="center" />
+            />
 
     </android.support.design.widget.TextInputLayout>
 
