--- a/app/src/main/res/layout/fragment_dialog_fragment_beneficiario.xml
+++ b/app/src/main/res/layout/fragment_dialog_fragment_beneficiario.xml
@@ -10,7 +10,17 @@
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
-       <EditText
+       <android.support.design.widget.TextInputLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_marginEnd="8dp"
+           android:layout_marginStart="8dp"
+           android:layout_marginTop="8dp"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@+id/btn_check">
+
+            <AutoCompleteTextView
            android:id="@+id/inputBeneficiario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
@@ -21,7 +31,7 @@
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
 
-
+       </android.support.design.widget.TextInputLayout>
 
        <LinearLayout
            android:layout_width="match_parent"
